# QRadioPlayer

./: .gitmodules  CMakeLists.txt  LICENSE  Main.qml  README.md  dumpcatcher.cpp  globalconst.h  logger.h  main.cpp  uienum.h  uierror.h  utility.cpp  utility.h
.github/workflows/: android.yml  macos.yml  windows.yml
manager/: apimgr.cpp  apimgr.h  logmgr.cpp  logmgr.h
qmls/common/: AudioControl.qml  CommonAnimatedImage.qml  ItemFlowPage.qml  PlaybackControl.qml  PlaybackSeekControl.qml  ScrollablePage.qml  SettingsPopup.qml  UrlPopup.qml
qmls/radio/: BroadCast.qml  FIFM.qml  MainPage.qml
qmls/setting/: AboutDialog.qml  AccountMenu.qml  SettingsDialog.qml
qmls/singletons/: ToolSingleton.qml
